[package]
name = "natrav"
version = "0.1.0"
authors = ["Dominik Maier <domenukk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
pnet = "0.26.0" # for raw sockets
pnet_base = "0.26.0"
pnet_datalink = "0.26.0"
pnet_packet = "0.26.0"
pnet_transport = "0.26.0"